more safari fixes, and spacing issues

--- a/wedding-web/src/styles.scss
+++ b/wedding-web/src/styles.scss
@@ -203,7 +203,7 @@ body {
 }
 
 .welcome-amp {
-	margin: 0 10px;
+	margin: 0 5px;
 	font-weight: 400;
 	opacity: 0.7;
 }
